force-app/main/default/objects/FromToMapping__mdt/FromToMapping__mdt.object-meta.xml
<CustomObject>
    <description>Metadata genérico para ser utilizado para inclusão de de/para que serão utilizados na Org.</description>
    <label>Mapeamento DePara</label>
    <pluralLabel>Mapeamento DePara</pluralLabel>
</CustomObject>