force-app/main/default/objects/FromToMapping__mdt/fields/ApprovalLimitValue__c.field-meta.xml
<CustomField>
    <fullName>ApprovalLimitValue__c</fullName>
    <description>ALÇADA - VALOR LIMITE</description>
    <label>Alçada - Valor limite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>