force-app/main/default/objects/FromToMapping__mdt/fields/CanvasHybris__c.field-meta.xml
<CustomField>
    <fullName>CanvasHybris__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicação se o papel tem acesso ao botão de Ver Ofertas do Hybris.</description>
    <label>Canvas Hybris</label>
    <type>Checkbox</type>
</CustomField>