force-app/main/default/objects/FromToMapping__mdt/fields/CaseHandling__c.field-meta.xml
<CustomField>
    <fullName>CaseHandling__c</fullName>
    <description>Grupo de Tratamento de Caso Utilizado para Casos Valentina(Caso/Processo)</description>
    <label>Grupo de Tratamento de Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>