force-app/main/default/objects/FromToMapping__mdt/fields/CaseOpening__c.field-meta.xml
<CustomField>
    <fullName>CaseOpening__c</fullName>
    <description>Grupo de abertura de Caso, utilizado para filtrar os palitos de Caso/Processo conforme o Perfil para este registro.</description>
    <label>Grupo de Abertura de Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>