force-app/main/default/objects/FromToMapping__mdt/fields/CaseReturn__c.field-meta.xml
<CustomField>
    <fullName>CaseReturn__c</fullName>
    <description>Grupo de Retorno de Caso Utilizado para Casos Valentina(Caso/Processo)</description>
    <label>Grupo de Retorno de Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>