force-app/main/default/objects/FromToMapping__mdt/fields/ChannelName__c.field-meta.xml
<CustomField>
    <fullName>ChannelName__c</fullName>
    <description>Valentina - Bloco 9-Jornada 71-Abertura de Defeito e Reparo</description>
    <inlineHelpText>Usado para Definir se perfil é de Lojas Proprias, Lojas Revendas ou Call Center (Filtro palitos Valentina)</inlineHelpText>
    <label>Nome do Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lojas Proprias</fullName>
                <default>true</default>
                <label>Lojas Proprias</label>
            </value>
            <value>
                <fullName>Lojas Revendas</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>