force-app/main/default/objects/FromToMapping__mdt/fields/CustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contestação</description>
    <label>Picklist - A pedido do Cliente</label>
    <type>Checkbox</type>
</CustomField>