force-app/main/default/objects/FromToMapping__mdt/fields/DestinyApiName__c.field-meta.xml
<CustomField>
    <fullName>DestinyApiName__c</fullName>
    <description>ApiName do campo desejado destino</description>
    <label>ApiName do campo destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>