force-app/main/default/objects/FromToMapping__mdt/fields/DestinyName__c.field-meta.xml
<CustomField>
    <fullName>DestinyName__c</fullName>
    <description>Nome do campo desejado destino</description>
    <label>Nome do campo destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>