force-app/main/default/objects/FromToMapping__mdt/fields/DoNotCreateInteraction__c.field-meta.xml
<CustomField>
    <fullName>DoNotCreateInteraction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Não criar protocolo para alguns papéis</description>
    <label>Não Gerar Protocolo</label>
    <type>Checkbox</type>
</CustomField>