force-app/main/default/objects/FromToMapping__mdt/fields/ImproperActivation__c.field-meta.xml
<CustomField>
    <fullName>ImproperActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contestação</description>
    <label>Picklist - Ativação indevida</label>
    <type>Checkbox</type>
</CustomField>