force-app/main/default/objects/FromToMapping__mdt/fields/InternalProcedure__c.field-meta.xml
<CustomField>
    <fullName>InternalProcedure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contestação</description>
    <label>Picklist - Procedimento Interno</label>
    <type>Checkbox</type>
</CustomField>