force-app/main/default/objects/FromToMapping__mdt/fields/LimitDaysConcessions__c.field-meta.xml
<CustomField>
    <fullName>LimitDaysConcessions__c</fullName>
    <description>QTDE LIMITE DIAS CONCESSÕES</description>
    <label>Qtde Limite Dias Concessóes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>