force-app/main/default/objects/FromToMapping__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object do campo desejado origem</description>
    <label>Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>