force-app/main/default/objects/FromToMapping__mdt/fields/OperatorSegment__c.field-meta.xml
<CustomField>
    <fullName>OperatorSegment__c</fullName>
    <description>Segmento do operador utilizado no de-para do componente de atendimento.</description>
    <label>Segmento do Operador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
                <default>true</default>
                <label>Silver</label>
            </value>
            <value>
                <fullName>Púrpura</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Vivo V</fullName>
            </value>
            <value>
                <fullName>Ouvidoria</fullName>
            </value>
            <value>
                <fullName>Ouvidoria Comunidades</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Omnichannel</fullName>
            </value>
            <value>
                <fullName>PAP</fullName>
            </value>
            <value>
                <fullName>Revenda</fullName>
            </value>
            <value>
                <fullName>Lojas (Revendas)</fullName>
            </value>
            <value>
                <fullName>Suporte a Lojas</fullName>
            </value>
            <value>
                <fullName>Televendas</fullName>
            </value>
            <value>
                <fullName>Atendimento</fullName>
            </value>
            <value>
                <fullName>Backoffice</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Retencao</fullName>
            </value>
            <value>
                <fullName>Purpura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>