force-app/main/default/objects/FromToMapping__mdt/fields/OriginApiName__c.field-meta.xml
<CustomField>
    <fullName>OriginApiName__c</fullName>
    <description>ApiName do campo desejado origem</description>
    <label>ApiName do campo Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>