force-app/main/default/objects/FromToMapping__mdt/fields/OriginName__c.field-meta.xml
<CustomField>
    <fullName>OriginName__c</fullName>
    <description>Nome do campo desejado origem</description>
    <label>Nome do campo Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>