force-app/main/default/objects/FromToMapping__mdt/fields/ProductWithdrawal__c.field-meta.xml
<CustomField>
    <fullName>ProductWithdrawal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contestação</description>
    <label>Picklist - Desistencia do Produto</label>
    <type>Checkbox</type>
</CustomField>