force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugnCustomerSegmentGold__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugnCustomerSegmentGold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Concessão - Segmento Cliente Gold</description>
    <label>Concessão - Segmento Gold</label>
    <type>Checkbox</type>
</CustomField>