force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugnCustomerSegmentPlatinum__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugnCustomerSegmentPlatinum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Concessão - Segmento Cliente Platinum</description>
    <label>Concessão - Segmento Platinum</label>
    <type>Checkbox</type>
</CustomField>