force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugnCustomerSegmentPurple__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugnCustomerSegmentPurple__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Concessão - Segmento Cliente Púrpura</description>
    <label>Concessão - Segmento Púrpura</label>
    <type>Checkbox</type>
</CustomField>