force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugnCustomerSegmentSilver__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugnCustomerSegmentSilver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Concessão - Segmento Cliente Silver</description>
    <label>Concessão - Segmento Silver</label>
    <type>Checkbox</type>
</CustomField>