force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugnCustomerWithoutSegment__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugnCustomerWithoutSegment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Concessão - Sem Segmento</description>
    <label>Concessão - Sem Segmento</label>
    <type>Checkbox</type>
</CustomField>