force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugNotAcceptedCustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugNotAcceptedCustomerRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Não Procede - A pedido do Cliente</description>
    <label>Impugnaçao - A pedido do Cliente</label>
    <type>Checkbox</type>
</CustomField>