force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugNotAcceptedInternalProcedure__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugNotAcceptedInternalProcedure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Não Procede - Procedimento Interno</description>
    <label>Impugnaçao -Procedimento Interno</label>
    <type>Checkbox</type>
</CustomField>