force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugRetifCustomerSegmentGold__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugRetifCustomerSegmentGold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Retificação - Segmento Cliente Gold</description>
    <label>Retificação - Segmento Gold</label>
    <type>Checkbox</type>
</CustomField>