force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugRetifCustomerSegmentPlatinum__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugRetifCustomerSegmentPlatinum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Retificação - Segmento Cliente Platinum</description>
    <label>Retificação - Segmento Platinum</label>
    <type>Checkbox</type>
</CustomField>