force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugRetifCustomerSegmentPurple__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugRetifCustomerSegmentPurple__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Retificação - Segmento Cliente Púrpura</description>
    <label>Retificação - Segmento Púrpura</label>
    <type>Checkbox</type>
</CustomField>