force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugRetifCustomerSegmentSilver__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugRetifCustomerSegmentSilver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Retificação - Segmento Cliente Silver</description>
    <label>Retificação - Segmento Silver</label>
    <type>Checkbox</type>
</CustomField>