force-app/main/default/objects/FromToMapping__mdt/fields/ReasonImpugRetifCustomerWithoutSegment__c.field-meta.xml
<CustomField>
    <fullName>ReasonImpugRetifCustomerWithoutSegment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Motivos de Impugnação - Retificação - Sem Segmento</description>
    <label>Retificação - Sem Segmento</label>
    <type>Checkbox</type>
</CustomField>