force-app/main/default/objects/FromToMapping__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>RecordType do campo desejado</description>
    <label>Tipo de registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>