force-app/main/default/objects/FromToMapping__mdt/fields/TokenPID__c.field-meta.xml
<CustomField>
    <fullName>TokenPID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag para habilitar o acesso ao componente pidTokenValidate</description>
    <inlineHelpText>Flag para habilitar o acesso ao componente pidTokenValidate</inlineHelpText>
    <label>TokenPID</label>
    <type>Checkbox</type>
</CustomField>