force-app/main/default/objects/FromToMapping__mdt/fields/UsedIn__c.field-meta.xml
<CustomField>
    <fullName>UsedIn__c</fullName>
    <description>UsedIn onde o campo desejado</description>
    <label>Utilizado em</label>
    <length>255</length>
    <type>Text</type>
</CustomField>