force-app/main/default/objects/FromToMapping__mdt/listViews/ServiceFlow.listView-meta.xml
<ListView>
    <fullName>ServiceFlow</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>DestinyApiName__c</columns>
    <columns>OriginApiName__c</columns>
    <columns>ServiceTree__c</columns>
    <columns>CanvasHybris__c</columns>
    <columns>DestinyName__c</columns>
    <columns>OriginName__c</columns>
    <columns>Object__c</columns>
    <columns>OperatorSegment__c</columns>
    <columns>RecordType__c</columns>
    <columns>UsedIn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UsedIn__c</field>
        <operation>equals</operation>
        <value>ServiceFlow</value>
    </filters>
    <label>ServiceFlow</label>
    <language>en_US</language>
</ListView>