force-app/main/default/objects/FromToMapping__mdt/listViews/Tudo.listView-meta.xml
<ListView>
    <fullName>Tudo</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DestinyName__c</columns>
    <columns>DestinyApiName__c</columns>
    <columns>OriginName__c</columns>
    <columns>OriginApiName__c</columns>
    <columns>OperatorSegment__c</columns>
    <columns>ServiceTree__c</columns>
    <columns>TokenPID__c</columns>
    <columns>CanvasHybris__c</columns>
    <columns>Object__c</columns>
    <columns>RecordType__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>UsedIn__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>